--- a/angular.json
+++ b/angular.json
@@ -82,6 +82,11 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "browsers": "ChromeHeadlessNoSandbox",
+            "codeCoverage": true,
+            "progress": false,
+            "main": "src/test.ts",
+            "karmaConfig": "karma.conf.js",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
