Front-angular : Ajoute une fonctionnalité temps réel 	Implémente une fonctionnalité dans Angular pour afficher les notifications en temps réel (ex. : “Un nouveau produit a été ajouté”). 	Améliorer les tests

--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,8 @@
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
-              "zone.js"
+              "zone.js",
+              "src/polyfills.ts"  
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
@@ -89,7 +90,8 @@
             "karmaConfig": "karma.conf.js",
             "polyfills": [
               "zone.js",
-              "zone.js/testing"
+              "zone.js/testing",
+              "src/polyfills.ts"
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
