--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": [
+    "src",
+    "src/polyfills.ts"
+  ]
 }
