--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -7,7 +7,8 @@
     ]
   },
   "files": [
-    "src/test.ts"
+    "src/test.ts",
+    "src/polyfills.ts"
   ],
   "include": [
     "src/**/*.spec.ts",
