--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "e2e": "ng e2e",
+    "lint": "ng lint",
     "serve:ssr:fronted": "node dist/fronted/server/server.mjs"
   },
   "private": true,
@@ -39,7 +41,9 @@
     "@types/jasminewd2": "^2.0.13",
     "@types/node": "^18.18.0",
     "@types/sockjs-client": "^1.5.4",
+    "angular-eslint": "19.1.0",
     "cypress": "^14.0.1",
+    "eslint": "^9.20.0",
     "jasmine-core": "~5.4.0",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.4.0",
@@ -48,6 +52,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "typescript-eslint": "8.23.0"
   }
 }
