--- a/.github/workflows/cicd-angular.yml
+++ b/.github/workflows/cicd-angular.yml
@@ -25,8 +25,8 @@ jobs:
       - name: 📦 Installer les Dépendances
         run: npm ci
 
-     #  - name: 🔍 Vérification du Code (Lint)
-     #    run: npx eslint src/
+      - name: 🔍 Vérification du Code (Lint)
+        run: npx eslint src/
 
       - name: 🛠️ Lancer les Tests Unitaires
         run: npm run test -- --watch=false --browsers=ChromeHeadless
