--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.2",
+    "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^19.0.2",
     "@angular/compiler-cli": "^19.0.0",
     "@types/express": "^4.17.17",
@@ -43,6 +43,7 @@
     "@types/sockjs-client": "^1.5.4",
     "angular-eslint": "19.1.0",
     "cypress": "^14.0.1",
+    "esbuild": "^0.25.0",
     "eslint": "^9.20.0",
     "jasmine-core": "~5.4.0",
     "jasmine-spec-reporter": "^7.0.0",
@@ -53,6 +54,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "8.23.0"
+    "typescript-eslint": "8.23.0",
+    "vite": "^6.1.1"
+  },
+  "resolutions": {
+    "esbuild": "0.25.0"
   }
 }
