Fixer un bug concernant l'injection de l'url du backdu production end en utilisant environments

--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets"
             ],
             "styles": [
               "src/styles.css",
